# bibliotheken

./: CMakeLists.txt  README.md  bibliotheken.c  bibliotheken.geany
buttons/: CMakeLists.txt  README.md  buttons.c  buttons.h
buzzer_sound/: CMakeLists.txt  README.md  buzzer_sound.c  buzzer_sound.h
drehgeber/: CMakeLists.txt  drehgeber.c  drehgeber.h
ili_9341/: README.md  ili_9341.c  ili_9341.h
ili_9341/tools/: README.md  fraktal_240x135.data  fraktal_240x135.h  fraktal_240x135.xcf  rgb2header  rgb2header.c
momefilo_flash/: README.md  momefilo_flash.c  momefilo_flash.h
sh_1106/: CMakeLists.txt  README.md  font12x16.h  font8x16.h  font8x8.h  sh_1106.c  sh_1106.h
sh_1106/fontmaschine/: dateiInvert8x8.txt  font12x16.h  font8x8.h  fontNew.h  fontinvert.c  fontmachine.c  fontonvert
si4703/: README.md  si4703.c  si4703.h
si5351/: CMakeLists.txt  README.md  si5351.c  si5351.h
st_7735/: README.md  st_7735.c  st_7735.h
